# perf-agent

./: .env  .env.example  .gitignore  README.md  pyproject.toml
configs/: events.yaml  prompts.yaml  rules.yaml  safety.yaml  tools.yaml
docs/: README-Old.md  engineering_design.md
docs/reference/: android_list.txt  arm_perf_list.txt  hiperf_list.txt
docs/reports/: Report.md  Target.md
examples/: build_examples.sh  cpu_bound_case.json  io_bound_case.json  lock_contention_case.json  queue_lock_pipeline_case.json  spec_style_pipeline_case.json
examples/cpp/: cpu_bound_demo.cpp  lock_contention_demo.cpp  multiprocess_fanout_demo.cpp  multithread_cpu_demo.cpp  phased_cache_wave_demo.cpp
examples/tasks/: cpu_bound.json  cpu_bound.task.md
perf_agent.egg-info/: SOURCES.txt  requires.txt  top_level.txt
runs/interactive_sessions/: session_01cba1a1.json  session_2b122c2f.json  session_3c8e2098.json  session_6033cd72.json  session_648ae2b2.json  session_99916024.json  session_d5b2b43a.json  session_f6e6eb41.json
runs/run_02d5dba8/: actions_taken.json  audit.jsonl  environment.json  evidence_packs.json  hypotheses.json  observations.json  report.html  report.json  report.md  state.json
runs/run_03607658/: actions_taken.json  (+10 more)
tests/: test_analyzer.py  test_contracts.py  test_environment_profiler.py  test_event_mapper.py  test_interaction.py  test_parsers.py  test_rules.py  test_sandbox.py  test_state_machine.py  test_task_loader.py
tool_docs/: iostat.Tool.md  mpstat.Tool.md  perf_record.Tool.md  perf_stat.Tool.md  pidstat.Tool.md  sar.Tool.md  time.Tool.md
(+1422 files in other folders)
